--- a/app/components/Wallet.css
+++ b/app/components/Wallet.css
@@ -337,7 +337,7 @@
 }
 
 .scrolling-table .scrolling-table-header {
-    height: 10%;
+    height: 3.5rem;
 }
 
 .scrolling-table .scrolling-table-header.underline {
